--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.3.1
   intl: ^0.19.0
   shared_preferences: ^2.2.2
+  flutter_carousel_slider: ^1.1.0
 
 dev_dependencies:
   flutter_test:
