--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.2
   flutter_carousel_slider: ^1.1.0
+  jwt_decode: ^0.3.1
+  input_quantity: ^2.2.0
 
 dev_dependencies:
   flutter_test:
