--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_carousel_slider: ^1.1.0
   jwt_decode: ^0.3.1
   input_quantity: ^2.2.0
+  floating_bottom_navigation_bar: ^1.5.2
 
 dev_dependencies:
   flutter_test:
