--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   jwt_decode: ^0.3.1
   input_quantity: ^2.2.0
   floating_bottom_navigation_bar: ^1.5.2
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
