--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   input_quantity: ^2.2.0
   floating_bottom_navigation_bar: ^1.5.2
   badges: ^3.1.2
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
